--- a/src/main/resources/assets/sib_energy_craft/lang/en_us.json
+++ b/src/main/resources/assets/sib_energy_craft/lang/en_us.json
@@ -6,5 +6,8 @@
   "container.low_voltage_solar_panel": "LV Solar Panel",
 
   "block.sib_energy_craft.middle_voltage_solar_panel": "MV Solar Panel",
-  "container.middle_voltage_solar_panel": "MV Solar Panel"
+  "container.middle_voltage_solar_panel": "MV Solar Panel",
+
+  "block.sib_energy_craft.high_voltage_solar_panel": "HV Solar Panel",
+  "container.high_voltage_solar_panel": "HV Solar Panel"
 }
